js/js.translator/testData/incremental/invalidation/nestedClassWithCrossModuleInliner/lib1/l1.2.kt
class MyClass {
    class NestedClass {
        inline fun foo() = 1
    }

    fun unusedFunction() = -1
}
